--- a/p5x/empty-example/index.html
+++ b/p5x/empty-example/index.html
@@ -4,7 +4,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>p5.js example</title>
-    <style> body {padding: 0; margin: 0;} </style>
+    <style> body {padding: 0; margin: 0; background-color: black;} </style>
+    <link rel="stylesheet" href="main.css">
     <script src="../p5.min.js"></script>
     <script src="../addons/p5.dom.min.js"></script>
     <script src="../addons/p5.sound.min.js"></script>
